# flask_sample

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
app/: __init__.py
app/core/: __init__.py  config.py
app/core/models/: __init__.py  article.py  board.py  dashboard.py  user.py
app/core/resources/: article_resource.py  auth_resource.py  board_resource.py  dashboard_resource.py  user_resource.py
app/core/utils/: decorator.py  models.py  resource.py
deploy/: docker-compose-db.yml
migrations/versions/: 3c7a3dd6f884_.py  5c7d64eed88c_.py  9bacae28c0a2_.py
