[tool.poetry]
name = "elice"
version = "0.1.0"
description = ""
authors = ["cosmos2 <playnstop.s@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
flask-restx = "^0.5.0"
Flask-Migrate = "^3.1.0"
redis = "^3.5.3"
Flask-Session = "^0.4.0"
Flask-Login = "^0.5.0"
Flask-Cors = "^3.0.10"
Flask-Bcrypt = "^0.7.1"
pytz = "^2021.1"
psycopg2-binary = "^2.9.1"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.26.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
